--- a/LDP2 c9928203ed354d5da151a797f5618e5b.md
+++ b/LDP2 c9928203ed354d5da151a797f5618e5b.md
@@ -8,7 +8,7 @@ Nel secondo modulo di linguaggi di programmazione ci si occupa del sistema teori
 
 [Names and Environments](LDP2%20c9928203ed354d5da151a797f5618e5b/Names%20and%20Environments%20dd18d65935a942a2a6d0499379cdaca9.md)
 
-[Memory Managment](LDP2%20c9928203ed354d5da151a797f5618e5b/Memory%20Managment%20d066870ddc664537ad64c09f8dc22ded.md)
+[Memory Management](LDP2%20c9928203ed354d5da151a797f5618e5b/Memory%20Managment%20d066870ddc664537ad64c09f8dc22ded.md)
 
 [Scope](LDP2%20c9928203ed354d5da151a797f5618e5b/Scope%20559bb1c221e046f3bde37a037b247dc1.md)
 
